[package]
name = "manuf"
version = "0.1.1"
edition = "2018"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Ethernet vendor codes, and well-known MAC addresses"
license = "MIT"
readme = "README.md"
keywords = ["ethernet", "mac", "vendor"]
categories = ["network-programming"]
documentation = "https://docs.rs/manuf/"
repository = "https://github.com/flier/rust-manuf"

[badges]
travis-ci = { repository = "flier/rust-manuf", branch = "master" }
maintenance = { status = "experimental" }

[features]
default = []
latest = ["reqwest"]

[dependencies]
byteorder = "1.3"

[build-dependencies]
anyhow = "1.0"
itertools = "0.9"
reqwest = { version = "0.10", features = ["blocking"], optional = true }